2005-09-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, aws-net-std__ipv6.adb:
	(Peer_Port): New routine.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net-std__gnat.adb:
	(Get_Port): New routine.

	* aws-net-std__adasockets.adb:
	(Get_Addr_Info): Port parameter become Natural, was Positive.
	(Get_Port): New routine.

	* aws-net-std__ipv6.adb:
	(Get_Addr_Info): Port parameter become Natural, was Positive.
	(Get_Port): New routine.
	(In6_Addr): Moved from Peer_Addr into library level.
	(Sockaddr_In6): Moved from Peer_Addr into library level.

2005-08-16  Pascal Obry  <pascal@obry.net>

	* src/check_config.c:
	Update to output file in UNIX format. The file is written on disk
	 and not sent to the standard ouput where it is not possible to
	 avoid the CR+LF on Windows.

	* makefile:
	Change call to check_config accordingly.

2005-07-04  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* src/check_config.c:
	(TCP_NODELAY): New constant.
	(Set_Sock_Opt): Thin binding to setsockopt routine.

2005-07-02  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws-net-std__ipv6.adb:
	(Peer_Addr): Show IPv4 addresses mapped to IPv6 in IPv4 format.

2005-02-17  Pascal Obry  <pascal@obry.org>

	* templates_parser-input__aws.adb:
	(Open): Add exception message to help tracing missing files.

2005-02-16  Pascal Obry  <pascal@obry.org>

	* templates_parser-configuration__aws.ads:
	Split CVS tag to avoid long lines.

	* templates_parser-input__aws.adb:
	Split CVS tag to avoid long lines.

2005-02-16  Pascal Obry  <pascal@obry.org>

	* templates_parser-configuration__aws.ads:
	Initial revision.

	* templates_parser-input__aws.adb:
	Initial revision.

	* aws-os_lib__gnat.adb, aws-os_lib__posix.adb, aws-os_lib__win32.adb:
	(File_Timestamp): Renamed to File_Time_Stamp to be consistent with
	 the routine in GNAT.OS_Lib.

2005-02-15  Pascal Obry  <pascal@obry.org>

	* src/check_config.c: