@@ -1,3 +1,11 @@
+2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, aws-net-std__ipv6.adb:
+	(Accept_Socket): Do not try to reuse allocated Socket_Hidden. It is dangerouse,
+	 because it could be deallocated in the copy of socket.
+	(Bind): Idem. Free Socket_Hidden if bind fail.
+	(Connect): Idem.
+
 2005-09-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb, aws-net-std__ipv6.adb:
